--- a/index.html
+++ b/index.html
@@ -99,8 +99,6 @@
 
       vkBridge.send('VKWebAppInit');
 
-
-
       function auth(){
         vkBridge.send('VKWebAppGetUserInfo').then(_info =>{
           console.log(_info);
@@ -129,7 +127,11 @@
         vkBridge.send('VKWebAppShowNativeAds',{ad_format:"reward"}).then(data => {
           console.log(data);
           unityI.SendMessage('VKSDK', 'RewardGetting',JSON.stringify(data.result));})
-      }
+      },
+	  
+	  function PostOnWall(){
+		vkBridge.send("VKWebAppCallAPIMethod", {"method": "wall.post", "message": "Я прошел N уровень в игре! Присоединяйся!"});
+	  }
     </script>
   
   </body>
